[package]
name = "rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.43.0",features = ["full"] }
net={path="./net"}
tokio-native-tls = "0.3.1"
netdev = "0.32.0"
hex = "0.4.3"
num_enum = "0.6.1"
md5 = "0.7.0"
chrono = "0.4.39"
chrono-tz = "0.10.1"
static_init = "1.0.3"
fastrand = "2.3.0"
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]