[package]
name = "rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.43.0",features = ["full"] }
net={path="./net"}
tokio-native-tls = "0.3.1"
netdev = "0.32.0"
hex = "0.4.3"
num_enum = "0.6.1"
md5 = "0.7.0"
chrono = "0.4.39"
chrono-tz = "0.10.1"
static_init = "1.0.3"
fastrand = "2.3.0"



[profile.release]
opt-level = "z"       # 优化代码尺寸
lto = true            # 启用链接时优化 (Link Time Optimization)
codegen-units = 1     # 降低代码生成单元数，增加优化时间但减少二进制大小
panic = "abort"       # 使用 'abort' 而不是 'unwind' 来处理 panic
strip = "debuginfo"   # 移除调试信息