[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
net={path="./net"}
codec={path="./codec"}
fastrand = "2.3.0"
static_init = "1.0.3"
byteorder = "1.5.0"
url = "2.5.4"
chrono = "0.4.39"
chrono-tz = "0.10.0"
md5 = "0.7.0"
dns-lookup = "2.0.4"
num_enum = "0.7.3"
rustls = "0.23.21"
tokio-native-tls = "0.3.1"
openssl = "0.10.68"
tokio-openssl = "0.6.5"



[profile.release]
opt-level = 3       # 优化代码尺寸
lto = true            # 启用链接时优化 (Link Time Optimization)
codegen-units = 1     # 降低代码生成单元数，增加优化时间但减少二进制大小
panic = "abort"       # 使用 'abort' 而不是 'unwind' 来处理 panic
strip = "debuginfo"   # 移除调试信息
