[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = { path ="../net"}
flate2 = "1.0.35"
url = "2.5.4"
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2"
async-trait = "0.1.83"
static_init = "1.0.3"
num_enum = "0.6.1"
lazy_static = "1.5.0"
sha1 = "0.10.6"
base64="0.21.7"
rand = "0.8.5"
urlencoding = "2.1.3"
tokio-rustls = "0.24.1"
webpki-roots = "0.25.4"
dns-lookup = "2.0.4"
hex = "0.4.3"
matchit = "0.8.6"
futures-util="0.3.1"
tokio-native-tls = "0.3.1"
openssl = "0.10.68"
