[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.9"
async-trait = "0.1.83"
futures = "0.3.31"
static_init = "1.0.3"
num_enum = "0.6.1"
serde_json = "1.0.107"
url = "2.3.1"
hyper="1.0.0-rc.3"
tokio-native-tls = "0.3.1"
tokio-openssl = "0.6.5"
openssl = "0.10.68"

[profile.release]
opt-level = "z"       # 优化代码尺寸
lto = true            # 启用链接时优化 (Link Time Optimization)
codegen-units = 1     # 降低代码生成单元数，增加优化时间但减少二进制大小
panic = "abort"       # 使用 'abort' 而不是 'unwind' 来处理 panic
strip = "debuginfo"   # 移除调试信息