[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.9"
async-trait = "0.1.83"
futures = "0.3.31"
static_init = "1.0.3"
num_enum = "0.6.1"
serde_json = "1.0.107"
url = "2.3.1"
hyper="1.0.0-rc.3"
tokio-native-tls = "0.3.1"
tokio-openssl = "0.6.5"
openssl = "0.10.68"

